app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@simple_transfer.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/simple_transfer.json
---
[
    "Transfer": "Transaction",
    "Transfer": "0.000001 LUX to ",
    "Address": "fuji10an3cucdfqru984pnvv6y0rspvvclz634xwwhs",
    "Transfer": "0.006999 LUX to ",
    "Address": "fuji1qd2hdzdkjt23y6tw5km54ehpygl8upy2d5lllz",
    "Fee(LUX)": "0.001",
]
