app/src/parser/snapshots/rslib__parser__transactions__tests__tx_ui@x_export_to_c2.json.snap
---
source: app/src/parser/transactions.rs
expression: reduced
input_file: app/src/parser/testvectors/x_export_to_c2.json
---
[
    "ImportTx": "Importing in C-Chain",
    "Amount": "0.268435456",
    "Address": "local1qqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqqljssag",
    "From ": "X Chain",
    "Fee": "0",
]
